--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-rdflib==4.2.2
-django==2.2.5
-pandas==0.25.1
+version https://git-lfs.github.com/spec/v1
+oid sha256:0a53d389b2081fda075757b5c426a7f05ff2f690fdd0169b7a3b52c5583bf563
+size 42
